--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -11,13 +11,73 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+<!--        <TextView-->
+<!--            android:id="@+id/bieLblSaludo"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center"-->
+<!--            android:textSize="35sp"-->
+<!--            android:text="@string/app_name"/>-->
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            app:cardUseCompatPadding="true"
+            app:cardElevation="5dp"
+            android:layout_gravity="center">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_margin="10dp"
+                android:contentDescription="@string/proDescIconoComida"
+                android:src="@drawable/bienvenida"
+                android:layout_gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            app:cardUseCompatPadding="true"
+            app:cardElevation="5dp"
+            android:layout_gravity="center">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_margin="10dp"
+                android:contentDescription="@string/proDescIconoComida"
+                android:src="@drawable/bienvenida_productos"
+                android:layout_gravity="center"/>
+
+        </androidx.cardview.widget.CardView>
         <TextView
-            android:id="@+id/bieLblSaludo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="25sp"
-            android:text="@string/app_name"/>
+            android:textSize="35sp"
+            android:text="@string/bieLblQuienesSomos"
+            android:fontFamily="@font/poppins_semibold"
+            android:textColor="@color/titulo"
+            android:layout_marginHorizontal="20dp"/>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="@string/bieLblInformacion"
+                android:fontFamily="@font/poppins_medium"
+                android:layout_marginHorizontal="20dp"
+                android:justificationMode="inter_word"/>
+        </ScrollView>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
