--- a/app/src/main/res/layout/activity_cambiar_contrasena.xml
+++ b/app/src/main/res/layout/activity_cambiar_contrasena.xml
@@ -40,7 +40,7 @@
                 android:hint="@string/camTxtCambiarContrasenaNueva"
                 android:fontFamily="@font/poppins_medium"
                 android:maxLength="100"
-                android:inputType="textEmailAddress"/>
+                android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -55,7 +55,7 @@
                 android:hint="@string/camTxtCambiarContrasenaConfirmarNueva"
                 android:fontFamily="@font/poppins_medium"
                 android:maxLength="100"
-                android:inputType="textEmailAddress"/>
+                android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <RelativeLayout
