--- a/app/src/main/res/layout/fragment_mis_citas.xml
+++ b/app/src/main/res/layout/fragment_mis_citas.xml
@@ -41,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/citLblDetalleCita"
+            android:textColor="@color/white"
             android:textSize="15sp"
             android:fontFamily="@font/poppins_semibold"
             android:textAlignment="center"
@@ -72,6 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/citLblDetalleProximaCita"
+            android:textColor="@color/white"
             android:textSize="15sp"
             android:fontFamily="@font/poppins_semibold"
             android:padding="15dp"
