--- a/app/src/main/res/layout/fragment_productos.xml
+++ b/app/src/main/res/layout/fragment_productos.xml
@@ -46,15 +46,18 @@
                 android:contentDescription="@string/proDescIconoCarrito"
                 android:src="@drawable/icono_carrito" />
         </LinearLayout>
-
+        <android.widget.ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="665dp">
         <GridLayout
             android:id="@+id/contenedorEtiquetas"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="665dp"
             android:layout_marginTop="15dp"
             android:columnCount="2"
             android:rowCount="3"
             android:layout_gravity="center_horizontal"/>
+        </android.widget.ScrollView>
     </LinearLayout>
 
 </FrameLayout>
