--- a/app/src/main/res/layout/fragment_productos.xml
+++ b/app/src/main/res/layout/fragment_productos.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#FFFFFF"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragmentos.ProductosFragment">
 
@@ -20,12 +21,21 @@
             android:layout_height="70dp"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/closeButton"
+                android:layout_width="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="20dp"
+                android:contentDescription="@string/proDescIconoBuscar"
+                android:src="@drawable/icono_atras" />
+
             <TextView
                 android:id="@+id/proLblProductosTitulo"
                 android:layout_width="190dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
-                android:textSize="35sp"
+                android:textSize="32sp"
                 android:fontFamily="@font/poppins_semibold"
                 android:textColor="@color/titulo"/>
 
@@ -33,18 +43,18 @@
                 android:id="@+id/proImagenBuscar"
                 android:layout_width="30dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginStart="60dp"
                 android:layout_height="35dp"
                 android:contentDescription="@string/proDescIconoBuscar"
-                android:src="@drawable/icono_buscar" />
+                android:src="@drawable/icono_buscar"
+                android:layout_marginLeft="30dp"/>
             <ImageView
                 android:id="@+id/proImagenCarrito"
-                android:layout_width="45dp"
-                android:layout_marginTop="14dp"
-                android:layout_marginStart="20dp"
-                android:layout_height="45dp"
+                android:layout_width="35dp"
+                android:layout_marginTop="20dp"
+                android:layout_height="35dp"
                 android:contentDescription="@string/proDescIconoCarrito"
-                android:src="@drawable/icono_carrito" />
+                android:src="@drawable/icono_carrito"
+                android:layout_marginLeft="20dp"/>/>
         </LinearLayout>
         <android.widget.ScrollView
             android:layout_width="match_parent"
