--- a/app/src/main/res/layout/fragment_perfil_usuario.xml
+++ b/app/src/main/res/layout/fragment_perfil_usuario.xml
@@ -28,7 +28,7 @@
 
 
             <ImageButton
-                android:id="@+id/perIconoUsuario"
+                android:id="@+id/perBtnUsuario"
                 android:layout_width="wrap_content"
                 android:layout_height="140dp"
                 android:background="@color/fondoTransparente"
@@ -36,7 +36,7 @@
                 android:src="@drawable/user" />
 
             <ImageButton
-                android:id="@+id/perIconoEditar"
+                android:id="@+id/perBtnEditar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="45dp"
