--- a/app/src/main/res/layout/fragment_perfil_usuario.xml
+++ b/app/src/main/res/layout/fragment_perfil_usuario.xml
@@ -28,7 +28,7 @@
 
 
             <ImageButton
-                android:id="@+id/perBtnUsuario"
+                android:id="@+id/perIconoUsuario"
                 android:layout_width="wrap_content"
                 android:layout_height="140dp"
                 android:background="@color/fondoTransparente"
@@ -36,7 +36,7 @@
                 android:src="@drawable/user" />
 
             <ImageButton
-                android:id="@+id/perBtnEditar"
+                android:id="@+id/perIconoEditar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="45dp"
@@ -118,18 +118,90 @@
 
             android:layout_marginVertical="5dp"
             />
-        <android.widget.ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="75dp">
-            <GridLayout
-                android:id="@+id/contenedorMisMascotas"
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:columnCount="3"
+            android:rowCount="2"
+            android:layout_gravity="center_horizontal">
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="75dp"
-                android:layout_marginTop="15dp"
-                android:columnCount="3"
-                android:rowCount="2"
-                android:layout_gravity="center_horizontal"/>
-        </android.widget.ScrollView>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+
+                android:layout_marginEnd="16dp">
+
+                <ImageButton
+                    android:id="@+id/btnInfoMascota"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/perro1_95x70"
+                    android:scaleType="centerCrop"
+                    android:contentDescription="@string/perDescIconoMascota1"
+                    android:background="@color/fondoTransparente"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/perNombMascota1"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <!-- Segunda imagen (centrada) -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"> <!-- Espaciado a los lados -->
+
+                <ImageButton
+                    android:id="@+id/btnInfoMascota2"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/gato1_95x70"
+                    android:scaleType="centerCrop"
+                    android:contentDescription="@string/perDescIconoMascota2"
+                    android:background="@color/fondoTransparente"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/perNombMascota2"
+                    android:fontFamily="@font/poppins_medium"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+
+
+                <ImageButton
+                    android:id="@+id/btnAgregarMascota"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/plus_mascota"
+                    android:scaleType="centerCrop"
+                    android:contentDescription="@string/perDescIconoAgregar"
+                    android:background="@color/fondoTransparente"/>
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btnSalir"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Salir"
+                android:textColor="#FFFFFF"
+            android:padding="10dp"
+            android:layout_centerInParent="true"
+            android:textSize="18sp" />
+        </GridLayout>
 
     </LinearLayout>
 
