--- a/app/src/main/res/layout/fragment_perfil_usuario.xml
+++ b/app/src/main/res/layout/fragment_perfil_usuario.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".fragmentos.PerfilUsuarioFragment">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="735dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -115,8 +117,7 @@
             android:textSize="25sp"
             android:fontFamily="@font/poppins_semibold"
             android:textColor="@color/titulo"
-
-            android:layout_marginVertical="5dp"
+            android:layout_marginTop="40dp"
             />
         <GridLayout
             android:layout_width="wrap_content"
@@ -177,10 +178,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-
-
+                android:orientation="vertical">
                 <ImageButton
                     android:id="@+id/btnAgregarMascota"
                     android:layout_width="100dp"
@@ -189,20 +187,39 @@
                     android:scaleType="centerCrop"
                     android:contentDescription="@string/perDescIconoAgregar"
                     android:background="@color/fondoTransparente"/>
-
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btnSalir"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Salir"
-                android:textColor="#FFFFFF"
-            android:padding="10dp"
-            android:layout_centerInParent="true"
-            android:textSize="18sp" />
         </GridLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/exit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:layout_marginTop="20dp">
 
+            <ImageView
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="50dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_exit" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cerrar Sesión"
+                android:textSize="25dp"
+                android:textColor="#ffff0000"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_marginTop="10dp"
+                android:paddingStart="8dp" />
+        </LinearLayout>
+
+    </LinearLayout>
+    </ScrollView>
 </FrameLayout>
