--- a/app/src/main/res/layout/fragment_carrito_productos.xml
+++ b/app/src/main/res/layout/fragment_carrito_productos.xml
@@ -50,9 +50,9 @@
             android:id="@+id/contenedorEtiquetas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:columnCount="4"
+            android:columnCount="5"
             android:padding="16dp">
-    </GridLayout>
+        </GridLayout>
         <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -73,9 +73,10 @@
                 android:layout_margin="10dp" />
 
             <TextView
+                android:id="@+id/carTxtTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$30.00"
+                android:text="S/0.00"
                 android:gravity="right|center"
                 android:textStyle="bold"
                 android:fontFamily="@font/poppins_semibold"
