--- a/app/src/main/res/layout/fragment_reservar_cita.xml
+++ b/app/src/main/res/layout/fragment_reservar_cita.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:orientation="vertical">
         <!-- Titulo - Fijado arriba -->
